# ptdt

./: LICENSE  Makefile  README.md  pyproject.toml
ptdt/: __init__.py  ptdt.py
