[tool.poetry]
name = "ptdt"
version = "0.1.4"
description = "PyTorch Debug Tools"
authors = ["tanimutomo <tanimutomo@gmail.com>"]
license = "MIT"
repository = "https://github.com/tanimutomo/ptdt"
packages = [
  { include = "ptdt/*.py" }
]
exclude = [".gitignore" ]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
